--- a/.github/workflows/deploy_mdbook.yml
+++ b/.github/workflows/deploy_mdbook.yml
@@ -1,14 +1,39 @@
+name: Deploy Book
 on:
+  pull_request:
   push:
     branches:
       - main
 
 jobs:
-  ci:
-    name: CI
+  build-book:
+    name: Build Book
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: XAMPPRocky/deploy-mdbook@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install mdbook
+        run: cargo install mdbook --version "^0.4" --locked
+
+      - name: Run mdbook
+        run: mdbook build
+
+      - name: Upload book
+        uses: actions/upload-pages-artifact@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          path: book/
+          retention-days: "3"
+
+  deploy-book:
+    name: Deploy Book
+    if: ${{ github.event_name == 'push' && startsWith('refs/heads/main', github.ref) }}
+    needs: build-book
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy Book
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: book/
+          single-commit: true
